plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '1.0.17'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'mixin.env.remapRefMap', 'true'
            systemProperty 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            logLevel = org.slf4j.event.Level.DEBUG

        }

        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets {
    api {
        java {
            srcDir 'src/api/java'
        }
    }
    main {
        java {
            srcDir 'src/main/java'
        }
        resources {
            include '**/**'
            exclude '**/*.psd'
            srcDirs += 'src/generated/resources'
            exclude '.cache'
        }
        compileClasspath += sourceSets.api.output
        runtimeClasspath += sourceSets.api.output
    }
}

repositories {
    mavenLocal()
    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        // The One Probe
        name 'tterrag maven'
        url 'https://maven.tterrag.com/'
    }
    maven {
        // Curios
        name 'TheIllusiveC4 maven'
        url 'https://maven.theillusivec4.top/'
    }
    maven {
        // JEI, Mekanism
        name 'ModMaven'
        url 'https://modmaven.dev/'
    }
    maven {
        // Modern UI
        name 'IzzelAliz Maven'
        url 'https://maven.izzel.io/releases/'
    }
    maven {
        name 'CurseMaven'
        url 'https://www.cursemaven.com/'
        content {
            includeGroup "curse.maven"
        }
    }
    mavenCentral()
}

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // compile against the JEI API but do not include it at runtime
    compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
    // at runtime, use the full JEI jar for NeoForge
    localRuntime "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"

    compileOnly "mekanism:Mekanism:${mekanism_version}:api"
    localRuntime "mekanism:Mekanism:${mekanism_version}"

    implementation "curse.maven:the-one-probe-245211:4629624"

    compileOnly "curse.maven:gregtechceu-modern-890405:5100760"


    compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
    localRuntime "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"

    compileOnly "top.theillusivec4.curios:curios-forge:5.7.2+1.20.1:api"
    localRuntime "top.theillusivec4.curios:curios-forge:5.7.2+1.20.1"

//    minecraftLibrary("icyllis.modernui:ModernUI-Core:${modernui_core_version}") {
//        exclude group: "org.apache.logging.log4j", module: "log4j-core"
//        exclude group: "org.apache.logging.log4j", module: "log4j-api"
//        exclude group: "com.google.code.findbugs", module: "jsr305"
//        exclude group: "org.jetbrains", module: "annotations"
//        exclude group: "com.ibm.icu", module: "icu4j"
//        exclude group: "it.unimi.dsi", module: "fastutil"
//    }
//    minecraftLibrary("icyllis.modernui:ModernUI-Markdown:${modernui_core_version}") {
//        exclude group: "org.apache.logging.log4j", module: "log4j-core"
//        exclude group: "org.apache.logging.log4j", module: "log4j-api"
//        exclude group: "com.google.code.findbugs", module: "jsr305"
//        exclude group: "org.jetbrains", module: "annotations"
//        exclude group: "com.ibm.icu", module: "icu4j"
//        exclude group: "it.unimi.dsi", module: "fastutil"
//    }
//    implementation "icyllis.modernui:ModernUI-Forge:${minecraft_version}-${modernui_forge_version}"
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : mc_version,
//            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
//            neo_version_range      : neo_version_range,
//            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
//            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}